--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
     "ERC721"
   ],
   "author": "Awoke Zemenu",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "hardhat": "^2.14.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
+    "chai": "^4.3.10",
+    "dotenv": "^16.3.1"
+  }
 }
